# server-sdk-python

./: .gitignore  .gitmodules  README.md  README.rst  demo.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: licenserc.yml
.github/tools/: check_metadata.py
.github/workflows/: build.yml  codeql.yml  codestyle.yml  license.yml  pr_title.yml  release.yml  test.yml
docs/: api.rst  conf.py  contributing.rst  featureprobe.rst  index.rst  userguide.rst
featureprobe/: __init__.py  access_recorder.py  client.py  config.py  context.py  data_repository.py  data_repository_factory.py  default_event_processor.py  default_event_processor_factory.py  detail.py  evaluation_result.py  event.py  event_processor.py  event_processor_factory.py  featureprobe.py  file_synchronizer.py  file_synchronizer_facrory.py  fp_config.py  fp_context.py  fp_detail.py  fp_user.py  hit_result.py  http_config.py  http_configuration.py  memory_data_repository.py  memory_data_repository_factory.py  polling_synchronizer.py  pooling_synchronizer.py  pooling_synchronizer_factory.py  realtime.py  sdk.py  server.py  streaming_synchronizer.py  synchronizer.py  synchronizer_factory.py  user.py
featureprobe/internal/: __init__.py  defaultable.py  deprecated.py  empty_str.py  finish_future.py  http_error.py  json_decoder.py  json_nullable.py  semver.py  serializable.py  stringifiable.py  to_string.py  tz_config.py  wrapper_default.py
featureprobe/model/: __init__.py  condition.py  distribution.py  predicate.py  prerequisite.py  repository.py  rule.py  segment.py  segment_rule.py  serve.py  split.py  toggle.py
featureprobe/predicate/: __init__.py
tests/: access_recorder_test.py  benchmark.py  commons.py  condition_test.py  f_test.py  featureprobe_test.py  file_serialization_test.py  polling_synchronizer_test.py  pooling_synchronizer_test.py  repository_serialization_test.py  semver_test.py  split_test.py  user_test.py
tests/resources/datasource/: repo2.json
tests/resources/test/server-sdk-specification/spec/: toggle_simple_spec.json
