[metadata]

name = featureprobe-server

description = FeatureProbe Server Side SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown

author = FeatureProbe

license = Apache 2.0
license_files = LICENSE

keywords =
    feature management
    server sdk

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Development Status :: 3 - Alpha
# 3 - Alpha
# 4 - Beta
# 5 - Production/Stable

project_urls =
    Project Homepage = https://github.com/FeatureProbe
    Source Code = https://github.com/FeatureProbe/server-sdk-python
    Bug Reports = https://github.com/FeatureProbe/server-sdk-python/issues


[options]

python_requires = >=3.5

packages = find:

install_requires =
    APScheduler~=3.0
    requests>=2.12.0,<=2.25.1
