; Copyright 2022 FeatureProbe
;
; Licensed under the Apache License, Version 2.0 (the "License");
; you may not use this file except in compliance with the License.
; You may obtain a copy of the License at
;
; http://www.apache.org/licenses/LICENSE-2.0
;
; Unless required by applicable law or agreed to in writing, software
; distributed under the License is distributed on an "AS IS" BASIS,
; WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
; See the License for the specific language governing permissions and
; limitations under the License.

[metadata]

name = featureprobe-server

description = FeatureProbe Server Side SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown

author = FeatureProbe

license = Apache 2.0
license_files = LICENSE

keywords =
    feature management
    server sdk

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Development Status :: 3 - Alpha
# 3 - Alpha
# 4 - Beta
# 5 - Production/Stable

project_urls =
    Project Homepage = https://github.com/FeatureProbe
    Source Code = https://github.com/FeatureProbe/server-sdk-python
    Bug Reports = https://github.com/FeatureProbe/server-sdk-python/issues


[options]

python_requires = >=3.5

packages = find:

install_requires =
    aiohttp~=3.0
    APScheduler~=3.0
